# volumes

./: .gitignore  .vol.tmp  LICENSE  Makefile  README.md  README.ru.md  install.sh  nfpm.yaml  pyproject.toml  vol.toml  volumes.py  volumes.sh
.github/workflows/: apt-repo.yml  aur.yml  homebrew.yml
aur/: .SRCINFO  PKGBUILD
completions/bash/: vol  vol.bash
completions/fish/: vol.fish
completions/zsh/: _vol
debian/: Packages  Release
homebrew/: vol.rb
scripts/: bump_version.sh  next_version.sh  sync_homebrew_tap.sh
vol/: __init__.py  __main__.py  buffer.py  cli.py  config.py  inline_config.py  logger.py  makefile.py  output.py  progress.py  runner.py  script.py  tmp_log.py
